Related e piccole modifiche a intro

--- a/deviant.bib
+++ b/deviant.bib
@@ -6,7 +6,38 @@
 
 %% Saved with string encoding Unicode (UTF-8)
 
-@article{deviant-arxiv,
+@inproceedings{DBLP:conf/aaai/BrewkaD0S15,
+  title = {asprin: Customizing Answer Set Preferences without a Headache},
+  author = {Brewka, Gerhard and Delgrande, James P. and Romero, Javier and Schaub, Torsten},
+  booktitle = {{AAAI}},
+  pages = {1467--1474},
+  publisher = {{AAAI} Press},
+  year = {2015}
+}
+
+%@article{deviant-tkde,
+%  author    = {Federico Chesani and
+%               Chiara Di Francescomarino and
+%               Chiara Ghidini and
+%               Daniela Loreti and
+%               Fabrizio Maria Maggi and
+%               Paola Mello and
+%               Marco Montali and
+%               Sergio Tessaris},
+%  title     = {Process discovery on deviant traces and other stranger things},
+%  journal   = {CoRR},
+%  volume    = {abs/2109.14883},
+%  year      = {2021},
+%  url       = {https://arxiv.org/abs/2109.14883},
+%  eprinttype = {arXiv},
+%  eprint    = {2109.14883},
+%  timestamp = {Mon, 04 Oct 2021 17:22:25 +0200},
+%  biburl    = {https://dblp.org/rec/journals/corr/abs-2109-14883.bib},
+%  bibsource = {dblp computer science bibliography, https://dblp.org},
+%  note = {Submitted for publication}
+%}
+
+@article{deviant-tkde,
   author    = {Federico Chesani and
                Chiara Di Francescomarino and
                Chiara Ghidini and
@@ -16,16 +47,9 @@
                Marco Montali and
                Sergio Tessaris},
   title     = {Process discovery on deviant traces and other stranger things},
-  journal   = {CoRR},
-  volume    = {abs/2109.14883},
+  journal   = {IEEE Transactions on Knowledge and Data Engineering},
   year      = {2021},
-  url       = {https://arxiv.org/abs/2109.14883},
-  eprinttype = {arXiv},
-  eprint    = {2109.14883},
-  timestamp = {Mon, 04 Oct 2021 17:22:25 +0200},
-  biburl    = {https://dblp.org/rec/journals/corr/abs-2109-14883.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  note = {Submitted for publication}
+  note = {Under review}
 }
 
 @inproceedings{DBLP:conf/bpm/SlaatsDB21,
