--- a/main.tex
+++ b/main.tex
@@ -51,6 +51,8 @@
 \newcommand\btext[1]{{\color{blue}{#1}}}
 
 \newcommand{\todofc}[1]{\todo[backgroundcolor=yellow,size=\tiny]{FC: #1}}
+\newcommand{\tododl}[1]{\todo[backgroundcolor=pink,size=\tiny]{DL: #1}}
+
 
 
 % Used for displaying a sample figure. If possible, figure files should
@@ -133,5 +135,17 @@ ADD ABSTRACT
  \bibliographystyle{splncs04}
  \bibliography{deviant}
 %
+
+\begin{acronym}[PUB/SUB]
+    \acro{AFA}{Alternating Finite Automata}
+    \acro{ASP}{Answer Set Programming}
+    \acro{BPM}{Business Process Management}
+    \acro{DAG}{Directed Acyclic Graphs}
+    \acro{DPML}{Declarative Process Model Learner}
+    \acro{ICL}{Inductive Constraint Logic}
+    \acro{ILP}{Inductive Logic Programming}
+    \acro{LTL}{Linear Temporal Logic}
+    \acro{XES}{eXtensible Event Stream}
+\end{acronym}
 
 \end{document}
