--- a/relatedWork.tex
+++ b/relatedWork.tex
@@ -14,7 +14,7 @@ In~\cite{2011-Maggi}, Maggi et al. propose to build a set of all possible candid
 Techniques to refine the business model excluding vacuously satisfied constraints are the focus of the subsequent works by Schunselaar et al. \cite{2012-Schunselaar} and Maggi et al. \cite{2012-Maggi}, whereas Di Ciccio et al. \cite{2017-DiCiccio} propose an approach to filter out frequent redundancies and inconsistencies. 
 All the cited declarative approaches do not deal with negative examples. Nonetheless, interestingly from our point of view, in \cite{2015-DiCiccio}  the authors define among the metrics to guide the declarative discovery approach, besides support and confidence, also the interest factor for each constraint w.r.t. the log, and the possibility to include in the search space constraints on prohibited behaviours.
 
-Negative examples are instead actively employed in the declarative discovery approaches \cite{2007-Lamma,2009-Chesani,2010-Bellodi,2016-Bellodi}, %, which are all based on the functioning principles of \ac{ICL} algorithm \cite{1995-DaRaedt} and thus intrinsically dependent to the availability of both negative and positive examples. 
+Negative examples are instead actively employed in the declarative discovery approaches \cite{2007-Lamma,2009-Chesani,2010-Bellodi,2016-Bellodi,DBLP:conf/bpm/SlaatsDB21}, %, which are all based on the functioning principles of \ac{ICL} algorithm \cite{1995-DaRaedt} and thus intrinsically dependent to the availability of both negative and positive examples. 
 eventually relaying for the evaluation on the output of synthetical log generators able to produce both positive and negative process cases \cite{2009-Goedertier,2014-Stocker,2010-Hee,2019-Chesani,2017-Chesani,2020-Loreti}.
 The technique by Lamma et al. \cite{2007-Lamma,2007b-Lamma} learns integrity constraints expressed as logical formulas, and translates them into the equivalent DecSerFlow constructs \cite{2006-Aalst}. 
 Bellodi et al. \cite{2010-Bellodi}, \cite{2016-Bellodi} employ the same approach and automatically convert the results into Markov Logic formulas---statistical relational learning is used to determine the weight of each formula.
@@ -24,14 +24,12 @@ Besides, this adopted approach is grounded on a SAT-based solver analogously to 
 
 Our notion of negative example is similar to the definitions of syntactical and semantic noise of \cite{2009-Gunther}, because our approach is able to extract both the syntactic information that characterise the positive examples w.r.t. negative, and the relevant semantic difference between traces that has been partially or totally modified at a certain point in time.
 %As a minor point, we also might notice that these works provides in output LTL formulas, while we opt for Declare formulas with LTL$_f$ semantics.
-
+%
 In this sense, our work is also closely related to deviance mining approaches \cite{2016-Nguyen}, i.e., techniques to extract the relevant details characterising those traces showing a sequence of activities that deviates from the expected behaviour. Wheres some deviance mining approaches \cite{2014-Suriadi,2014-Armas} focus on the differences between models discovered from deviant and non-deviant traces, others \cite{2013-Suriadi,2015-Partington,2013-Bose,2007-Lo,2016-Bernardi} intend it as a sort of sequence classification: to discover patterns of activities that distinguish different types of traces.
 
+%inserting user preferences in the discovery of declarative process models  as a two-class supervised task. In particular we start from a recent work \cite{deviant-arxiv} that introduces the \nd binary miner for the \declare \cite{2009-Aalst} modeling language. We show how to extend it with preference mechanisms able to increase the role of the users in obtaining their preferred models
  
- 
-\btext{Add somewhere something on Discovery with DCR graphs}
-% (https://dblp.uni-trier.de/pers/hd/s/Slaats:Tijs)} 
-
+Particularly relevant for our work was the contribution by Slaats et al. \cite{DBLP:conf/bpm/SlaatsDB21}, which proposes a binary classification procedure for process discovery evaluated on a precious set of real-life logs with negative examples from industry.\tododl{vogliamo dire altro di Slaats?}
 %https://link.springer.com/chapter/10.1007%2F978-3-030-21290-2_37
 %
 %https://link.springer.com/chapter/10.1007%2F978-3-642-32885-5_6
