--- a/deviant.tex
+++ b/deviant.tex
@@ -5,4 +5,5 @@
 
 \btext{CHiara G + Bolognesi: fare un sunto di deviant}
 
-Vorremo riprendere la parte tecnica del lavoro under revision, senza chiamarlo ``background'' perché non è mica ancora pubblicato e assodato...
+%Vorremo riprendere la parte tecnica del lavoro under revision, senza chiamarlo ``background'' perché non è mica ancora pubblicato e assodato...
+Our approach is based on \nd binary miner \cite{deviant-tkde}, which given the input sets $L^{+}$ and $L^{-}$ of positive and negative examples (traces), aims to extract a model accepting all cases in $L^{+}$ and rejecting all those in $L^{-}$. This operation includes an abstraction step, so that the resulting model would allow to classify also unknown traces, not reported in the input log. Depending on the choices made during the discovery process, the learned model can``shape'' the set of unknown traces in different ways.
