--- a/main.tex
+++ b/main.tex
@@ -92,7 +92,7 @@ Free University of Bozen/Bolzano, Italy\\
 \maketitle              % typeset the header of the contribution
 %
 \begin{abstract}
-ADD ABSTRACT
+ADD ABSTRACT\tododl{page limit: 16pp}
 \keywords{Process mining \and process discovery \and declarative process models \and deviant traces.}
 \end{abstract}
 %
