--- a/relatedWork.tex
+++ b/relatedWork.tex
@@ -3,7 +3,7 @@
 \section{Related Work}
 \label{sec:related}
 
-\btext{Bologna? Related work di deviant accorciati + i danesi + deviant?}
+%\btext{Bologna? Related work di deviant accorciati + i danesi + deviant?}
 
 
 
