--- a/deviant.tex
+++ b/deviant.tex
@@ -11,16 +11,16 @@ Our approach is based on \nd binary miner \cite{deviant-tkde}, which given two i
 %This operation includes an abstraction step, so that the resulting model would allow to classify also unknown traces, not reported in the input log. Depending on the choices made during the discovery process, the learned model can``shape'' the set of unknown traces in different ways.
 In this work, we try to enrich the binary miner with the possibility to express domain-dependent preferences on the discovered model. Therefore, we need to report here some definitions and explanations from \cite{deviant-tkde} that are useful to introduce also our approach.
 
-\nd start for a certain \emph{language bias}: Given a set of Declare templates $D$ and a set of activities $A$, we identify with $D[A]$ the set of all possible grounding of templates in $D$ w.r.t. $A$, i.e. all the constraints that can be built using the given activities.
+\nd start from a certain \emph{language bias}: Given a set of Declare templates $D$ and a set of activities $A$, we identify with $D[A]$ the set of all possible grounding of templates in $D$ w.r.t. $A$, i.e. all the constraints that can be built using the given activities.
 
-We respectively denote with $L^+$ and $L^?$ the sets of positive and negative traces, reported in the input event log. \nd starts by considering a---possibly empty---initial model $P$, that is a set of \declare constraints known to characterise the examples in $L^+$. The goal of \nd is to refine $P$ taking into account both the positive and the negative traces.
+We respectively denote with $L^+$ and $L^-$ the sets of positive and negative traces, reported in the input event log. \nd starts by considering a---possibly empty---initial model $P$, that is a set of \declare constraints known to characterise the examples in $L^+$. The goal of \nd is to refine $P$ taking into account both the positive and the negative traces.
 
 \begin{definition}{}\label{def:cand}
 Given the initial model $P$, a candidate solution for the discovery task is any set of constraints $S\subseteq D[A]$ s.t.
 \begin{enumerate*} [label=\textit{(\roman*)}]
   \item $P\subseteq S$;
   \item $\forall t\in L^+$ we have $t\models S$;
-  \item $\forall t\in L^-$ we have $t\not\models S$.
+  \item maximise the set $\{t\in L^-\mid t\not\models S\}$.
 \end{enumerate*}
 \end{definition}
 
@@ -59,11 +59,15 @@ Then, it builds the \textit{\sheriff} function to associate to any trace $t$ in 
 {\textit{\sheriff}}(t) = \{c\in {compatibles}~|~t\not\models c\} \\
 \end{equation}
 %
-The second step computes two other sets: the set $\mathcal{C}$ of all the constraints in $D[A]$ accepting all positive traces and rejecting at least one negative trace, i.e., $\mathcal{C} = \bigcup_{t\in L^-} \textit{\sheriff}(t)$; and the set $\mathcal{Z}$, containing all the subsets of $\mathcal{C}$ excluding all negative traces, i.e., $\mathcal{Z}=\{M\in\mathcal{P}(\mathcal{C})\mid \forall t\in L^-~t\not\models M \} $.
-Once these sets are computed, the goal of \nd is to look for the best solution according to a certain domain-independent criterion. 
-In the work \cite{deviant-tkde}, two different criteria were taken into account: \emph{generality} (or conversely, \emph{specificity}), and \emph{simplicity}.
-If the user is interested in the most general model, then \nd employs the closure operator $cl$ to select the model $S \in \mathcal{Z}$ with the less restricting consequences. In order to avoid redundancies \nd also removes from the selected model $S$ those constraints that are logical consequence of others in $S$.
-If the user wants the simplest model, \nd look for the solutions with the smallest closure and select the models with less constraints among those with closure of equal cardinality.\tododl{un esempio chiarirebbe meglio, ma non credo abbiamo spazio sufficiente}
+The \textit{\sheriff} function is used to identify the set of all candidate constraints from which a model can be selected; that is, the set $\mathcal{C}$ of all the constraints in $D[A]$ accepting all positive traces and rejecting at least one negative trace, i.e., $\mathcal{C} = \bigcup_{t\in L^-} \textit{\sheriff}(t)$. The solutions are selected from the set 
+\begin{equation}
+  \mathcal{Z}=\{M\in\mathcal{P}(\mathcal{C})\mid \forall t\in L^-~t\not\models M\cup P \text{ or } {\textit{\sheriff}}(t) = \emptyset \}
+\end{equation}
+according to a certain domain-independent\todo{ST: why domain-independent?} criterion. Due to the fact that not all the pairs of negative and positive set of traces can be perfectly separated by Declare~\cite{???}\todo{ST: reference to the paper}, there can be traces in $L^-$ for which the ${\textit{\sheriff}}$ is empty; we know that those cannot be excluded by any model that guarantees the acceptance of all the positive ones.
+
+In~\cite{deviant-tkde}, two different criteria were taken into account: \emph{generality} (or conversely, \emph{specificity}), and \emph{simplicity}.
+If the user is interested in the most general model, then \nd employs the closure operator $cl$ to select the models $S \in \mathcal{Z}$ with the less restricting consequences; that is, using the order $S\preceq S'$ defined by the subset of the closures $cl(S\cup P)\subseteq cl(S'\cup P)$.
+If the user wants the simplest model, \nd look for the solutions with minimal size of the closure, and, in case of ties, the size of the candidate; i.e., according to the lexicographic order of the pairs $(|cl(S\cup P)|, |S|)$.
 
 
 
